objects/CCMS_OS__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMS_DB_Id__c</fullName>
        <displayFormat>CCMSOS-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>CCMS DB Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CCMS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCMS Product</label>
        <referenceTo>CCMS_Product__c</referenceTo>
        <relationshipLabel>CCMS Product</relationshipLabel>
        <relationshipName>CCMS_OS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalId>true</externalId>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OS_Version__c</fullName>
        <externalId>true</externalId>
        <label>OS Version</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>CCMS OS</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CCMS OS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCMS OS</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>